--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/pasta-onions.html">Pasta and Onions</a>
+    <a href="recipes/elote.html">Elote (Mexican Street Corn)</a>
+    <a href="recipes/baked-chicken.html">Juicy Oven Baked Chicken</a>
 </body>
 </html>
