--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Odin Recipes: Home Page</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/pasta-onions.html">Pasta and Onions</a>
-    <a href="recipes/elote.html">Elote (Mexican Street Corn)</a>
-    <a href="recipes/baked-chicken.html">Juicy Oven Baked Chicken</a>
+    <h1>Recipes of Food I Find <em>Delicious</em></h1>
+    <img src="recipes/images/love-food.jpg">
+<ul>
+    <li><a href="recipes/pasta-onions.html">Pasta and Onions</a></li>
+    <li><a href="recipes/elote.html">Elote (Mexican Street Corn)</a></li>
+    <li><a href="recipes/baked-chicken.html">Juicy Oven Baked Chicken</a></li>
+<ul></ul>
 </body>
 </html>
